# vega-2

./: .gitignore  build.txt  cap_ffmpeg_impl.hpp  cap_ffmpeg_impl_2.4.13.6.hpp  get_system_info.sh  rtspdec.c
GrdApiJava/: makefile  pom.xml
GrdApiJava/src/main/java/guardant/: Api.java  GrdADS.java  GrdAES.java  GrdAES256.java  GrdAM.java  GrdAN.java  GrdAP.java  GrdARS.java  GrdAT.java  GrdCHM.java  GrdCodeInfo.java  GrdCodePublicData.java  GrdDC.java  GrdDI.java  GrdDM.java  GrdDR.java  GrdDT.java  GrdDongleID.java  GrdE.java  GrdECC160.java  GrdF.java  GrdFM.java  GrdFMI.java  GrdFMM.java  GrdFMR.java  GrdFindInfo.java  GrdGF.java  GrdGIF.java  GrdGIL.java  GrdGIM.java  GrdGIR.java  GrdGIV.java  GrdHASH64.java  GrdInfo.java  GrdLM.java  GrdLNG.java  GrdLockMode.java  GrdNotifyMessage.java  GrdRCS.java  GrdSA.java  (+13 more)
cam-vega-driver/: pom.xml
cam-vega-driver/src/main/java/wit/vega/: App.java  PlateNoteVO.java  PlateVO.java  VegaException.java  VegaManager.java  VegaUtils.java
cam-vega-driver/src/main/java/wit/vega/frame/: Cmd25051_SetDigOutStateOff.java  Cmd25051_SetDigOutStateOn.java  Cmd25134_GetDigOutState.java  Cmd25134_GetDigOutState_Response.java  Cmd25166_GetSingleImg.java  Cmd25166_GetSingleImg_Response.java  Cmd26001_ReadFile.java  Cmd26001_ReadFile_Response.java  Cmd26002_WriteFile.java  Cmd35000_ReloadListA.java  Cmd35000_ReloadListB.java  Cmd35002_GetListA.java  Cmd35003_GetListB.java  Cmd_GetList_Response.java  FourByteNumber.java  MsgCamEvent.java  ResponseFactory.java  VegaCmd.java  VegaCmdTag.java  VegaConsts.java  VegaDataFrame.java  VegaDataTag.java  VegaHeaderFrame.java  VegaMsgTag.java
cam-vega-driver/src/main/java/wit/vega/net/: TcpClient.java  TcpServer.java  TcpServerHandler.java
doc/: vega2command.docx  ~$ga2command.docx
guardant-ticket/: nbactions.xml  pom.xml
guardant-ticket/src/main/java/wit/guardant/ticket/: GrdData.java  GrdData2.java  GrdData3.java  GrdDongle.java  GrdException.java
guardant-ticket/src/test/java/wit/guardant/ticket/: GrdData2Test.java  GrdDataTest.java  GrdDongleTest.java  TimeGenerator.java
guardantlib/: grddongle.cpp
guardantlib/etc/: 95-grdnt.rules  grdnt-install.sh
guardantlib/include/: GcaAPI.h  GcaAPIdll.h  grdapi.h  grddrv.h  grderror.h  grdspactivate.h  nvkeyerr.h  nvskey32.h
iANPR1.3/: ReadMe.txt  ianpr_key.h
iANPR1.3/doc/: license_ianpr.rtf
iANPR1.3/include/: iANPR.h  iANPRcapture.h  iANPRerror.h
iANPR1.3/samples/(iANPRcapture_motion)/: (iANPRcapture_motion).cpp  makefile
iANPR1.3/samples/capture/: capture.cpp  makefile
iANPR1.3/samples/im_catalog/: makefile  sample.cpp
iANPR1.3/samples/image/: image.cpp  makefile
iANPR1.3/samples/image_new/: image_new.cpp  makefile
iANPR1.4/: ReadMe.txt  ianpr_key.h
iANPR1.4/doc/: license_ianpr.rtf
iANPR1.4/include/: iANPR.h  iANPRinterface.h
iANPR1.4/samples/(iANPRcapture_motion)/: (iANPRcapture_motion).cpp  makefile
iANPR1.4/samples/capture/: capture.cpp  makefile
iANPR1.4/samples/im_catalog/: makefile  sample.cpp
iANPR1.4/samples/image/: image.cpp  makefile
iANPR1.4/samples/image_new/: image_new.cpp  makefile
iANPR1.7/: ReadMe.txt
iANPR1.7/doc/en/: license_ianpr.rtf
iANPR1.7/doc/ru/: license_ianpr.rtf
iANPR1.7/include/: iANPR.h  iANPRCustom.h  iANPRcapture.h  iANPRerror.h  iANPRinterface.h
iANPR1.7/samples/(iANPRcapture_motion)/: (iANPRcapture_motion).cpp  makefile
iANPR1.7/samples/capture/: capture.cpp  makefile
iANPR1.7/samples/im_catalog/: makefile  sample.cpp
iANPR1.7/samples/image/: image.cpp  makefile
iANPR1.7/samples/image_new/: image_new.cpp  makefile
krm-admin/: pom.xml
krm-admin/src/main/java/wit/krm/admin/: FacesUtils.java  IConstants.java  KrmCtrl.java  KrmException.java  KrmProp.java  NtpTimer.java  PrefDaoSingl.java  ProgK.java  Translator.java  Utils.java
krm-admin/src/main/webapp/: index.xhtml
krm-admin/src/main/webapp/WEB-INF/: web.xml
krm-admin/src/main/webapp/sec/: login.xhtml  main.xhtml  templ-main.xhtml  templ.xhtml
krm-itrium-bridge/: pom.xml
krm-itrium-bridge/krm-itrium-bridge-ear/: pom.xml
krm-itrium-bridge/krm-itrium-bridge-ejb/: pom.xml
krm-itrium-bridge/krm-itrium-bridge-web/: pom.xml
krm-itrium-bridge/krm-itrium-bridge-web/src/main/webapp/: index.html
opencv2411arm/: libopencv_core.so.2.4.11  libopencv_imgproc.so.2.4.11
vega-proto/: pom.xml
vega-proto/src/main/java/wit/vegaproto/: App.java  VegaException.java  VegaUtils.java
vega-proto/src/main/java/wit/vegaproto/net/: Connection.java  HttpConnection.java  TcpConnection.java
vega-proto/src/main/java/wit/vegaproto/proto/: ConnectMessage.java  Constants.java  DataMessage.java  Protocol.java  Transport.java  (+2 more)
vega-proxy/: pom.xml  vega-proxy.properties
vega-proxy/src/main/java/wit/vegaproxy/: App.java
vega2-lic-gen/: nbactions.xml  pom.xml
vega2app/: CMakeLists.txt  InstallScript.cmake  install.sh  main.cpp  postinst  settings.ini
vega2lib/: CMakeLists.txt  GPIOClass.cpp  core.cpp  core.h  dbinterface.cpp  dbinterface.h  dynamicfactory.h  platereadyvisitor.cpp  platereadyvisitor.h  platetimedata.cpp  platetimedata.h  settings.cpp  settings.h  tcpcommandserver.cpp  tcpcommandserver.h  tcpcommandsession.cpp  tcpcommandsession.h  vegabancotag.cpp  vegabancotag.h  vegabasetag.cpp  vegabasetag.h  vegacommand.cpp  vegacommand.h  vegacommand25051_startdigitaloutput.cpp  vegacommand25051_startdigitaloutput.h  vegacommand25052_stopdigitaloutput.cpp  vegacommand25052_stopdigitaloutput.h  vegacommand25134_readdigitalinputoutput.cpp  vegacommand25134_readdigitalinputoutput.h  vegacommand25134_readdigitalinputoutput_response.cpp  vegacommand25134_readdigitalinputoutput_response.h  vegacommand25166_getsingleimage.cpp  vegacommand25166_getsingleimage.h  vegacommand25166_getsingleimage_response.cpp  vegacommand25166_getsingleimage_response.h  vegacommand26000_resetdevice.cpp  vegacommand26000_resetdevice.h  vegacommand26001_readfile.cpp  vegacommand26001_readfile.h  vegacommand26001_readfile_response.cpp  (+31 more)
vega2qtapp/: anprapp.cpp  anprapp.h  anprapp.qrc  anprapp.ui  imagewidget.cpp  imagewidget.h  main.cpp  vega2qtapp.pro
(+8 files in other folders)
